--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <footer>
       This is Leo Gonzalez cool website. 
       I might be showing you this or you may have 
-      gotten here threw the world wide web. 
+      gotten here through the world wide web. 
       Thank you for your time!
     </footer>
   </body>
