Small grammar correction

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </main>
     <footer>
-      This is Leo Gonzalez cool website. 
+      This is Leo Gonzalez's cool website. 
       I might be showing you this or you may have 
       gotten here through the world wide web. 
       Thank you for your time!
