--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       img {border: 1px solid red; float:left}
       h1 {color: white; margin:0; padding-top: 25vh;}
       footer {background-color: gray;
-      padding: 20px 0; color: azure}
+      padding: 20px 0; color: blue}
     </style>
   </head>
   <body>
